fixed vertical spacing for header woman with donut image

--- a/css/main.css
+++ b/css/main.css
@@ -82,7 +82,7 @@ header nav a:hover {
 #hero #hero-image {
     margin-top: 45px;
     margin-left: -20px;
-    margin-bottom: -3px;
+    margin-bottom: -4px;
 }
 
 
